# pyNMPC

./: .pre-commit-config.yaml  README.md  demo_2dquadrotor_with_suspension.ipynb  ekf.py  nmhe.py  nmpc.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: unittest.yml
examples/: mhe_ekf_paylload_estimation.ipynb  mhe_ekf_payload_estimation.ipynb  mhe_unicycle.ipynb  mpc_quadrotor_suspension.ipynb  mpc_unicycle.ipynb  unicycle.ipynb
pyNMPC/: ekf.py  nmhe.py  nmpc.py
tests/: test_nmpc.py
