[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyNMPC"
version = "0.0.1"
description = "Nonlinear Model Predictive Control based on CVXPY and JAX."
authors = [{ name = "Shao-An Lu", email = "abc@email.com" }]
readme = "README.md"
license = { text = "Apache License 2.0" }
requires-python = ">=3.10"
keywords = ["optimization", "automatic differentiation", "jax"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache License 2.0",
    "Programming Language :: Python :: 3",
]
dependencies = ["jax>=0.4.0", "jaxlib>=0.4.0", "cvxpy"]
optional-dependencies = { "dev" = ["pre-commit"] }

[project.urls]
"Homepage" = "https://github.com/shaoanlu/pyNMPC"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"*.ipynb" = ["ALL"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"